--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 server.port=8090
+spring.datasource.url=jdbc:postgresql://localhost:5432/later
+spring.datasource.username=postgres
+spring.datasource.password=3050
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
+hibernate.show_sql=true
